@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Copyright 2010 Dr D Studios Pty Limited (ACN 127 184 954) (Dr. D Studios),
 //  its affiliates and/or its licensors.
@@ -89,6 +89,7 @@
 #include "IECoreMaya/bindings/ToMayaImageConverterBinding.h"
 #include "IECoreMaya/bindings/FromMayaImageConverterBinding.h"
 #include "IECoreMaya/bindings/FromMayaStringPlugConverterBinding.h"
+#include "IECoreMaya/bindings/ToMayaCameraConverterBinding.h"
 
 using namespace IECore;
 using namespace IECoreMaya;
@@ -151,4 +152,5 @@ BOOST_PYTHON_MODULE(_IECoreMaya)
 	bindToMayaImageConverter();
 	bindFromMayaImageConverter();
 	bindFromMayaStringPlugConverter();
+	bindToMayaCameraConverter();
 }
